Updates for Node version deprecation warnings
- Update to Node cache v3 which now supports Node 16
- Update to aws credentials action node-16 branch for version 16 support

--- a/.github/workflows/upload-to-s3.yaml
+++ b/.github/workflows/upload-to-s3.yaml
@@ -32,7 +32,7 @@ jobs:
       id-token: write
     steps:
       - name: Configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1-node16
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/GithubActionsRole
           role-session-name: GithubActionsSession
