--- a/workflow-templates/ci.yaml
+++ b/workflow-templates/ci.yaml
@@ -21,19 +21,19 @@ jobs:
     outputs:
       short_sha: ${{ steps.sha.outputs.SHORT_SHA }}
       archive_name: ${{ steps.archive.outputs.ARCHIVE_NAME }}
-      steps:
-        - uses: actions/checkout@v3
-        - name: Set short sha output
-          id: sha
-          run: echo "SHORT_SHA=$(git rev-parse --short=11 HEAD)" >> $GITHUB_OUTPUT
-        - name: Set archive name output
-          id: archive
-          run: |
-            export PRETTY_BRANCH_NAME=$(tr '/' '-' <<< ${{ github.ref_name }})
-            echo "ARCHIVE_NAME=${PRETTY_BRANCH_NAME}.zip" >> $GITHUB_OUTPUT
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set short sha output
+        id: sha
+        run: echo "SHORT_SHA=$(git rev-parse --short=11 HEAD)" >> $GITHUB_OUTPUT
+      - name: Set archive name output
+        id: archive
+        run: |
+          export PRETTY_BRANCH_NAME=$(tr '/' '-' <<< ${{ github.ref_name }})
+          echo "ARCHIVE_NAME=${PRETTY_BRANCH_NAME}.zip" >> $GITHUB_OUTPUT
 
   build:
-    uses: dvsa/.github/workflows/build.yaml@main
+    uses: dvsa/.github/.github/workflows/build.yaml@main
     needs: [ build-names ]
     with:
       upload-artifact: ${{ github.ref_name == 'main' }}
@@ -43,8 +43,8 @@ jobs:
       build-command: build:prod
 
   upload-main-to-s3:
-    if: ${{ github.ref_name == 'main' }}
-    uses: dvsa/.github/workflows/upload-to-s3.yaml@main
+    if: ${{ github.ref_name == github.event.repository.default_branch }}
+    uses: dvsa/.github/.github/workflows/upload-to-s3.yaml@main
     needs: [ lint, test, build, build-names ]
     with:
       environment: dev
