Updates to Build & Upload workflows
- Improved input names to make it clearer what they are used for
- Remove input archive name and instead use build folder name as archive
  name
- Updates to README to improve documentation of using the workflows
- Add version info

--- a/.github/workflows/nodejs-build.yaml
+++ b/.github/workflows/nodejs-build.yaml
@@ -3,22 +3,23 @@ name: Build
 on:
   workflow_call:
     inputs:
-      artifact-name:
-        required: true
-        type: string
-      upload-artifact:
+      upload_artifact:
         required: false
         type: boolean
         default: false
-      dist-folder:
+      build_folder:
         required: false
         type: string
         default: 'dist'
-      retention-days:
+      build_folder_path:
+        required: false
+        type: string
+        default: 'dist'
+      retention_days:
         required: false
         type: number
-        default: 7
-      build-command:
+        default: 3
+      build_command:
         required: false
         type: string
         default: 'package'
@@ -32,11 +33,11 @@ jobs:
       - name: Install dependencies
         uses: dvsa/.github/.github/actions/install-deps@main
       - name: Build
-        run: npm run ${{ inputs.build-command }}
+        run: npm run ${{ inputs.build_command }}
       - name: Upload artifact
-        if: inputs.upload-artifact
+        if: inputs.upload_artifact
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ inputs.artifact-name }}
-          path: ${{ inputs.dist-folder }}
-          retention-days: ${{ inputs.retention-days }}
+          name: ${{ inputs.build_folder }}
+          path: ${{ inputs.build_folder_path }}
+          retention-days: ${{ inputs.retention_days }}
