--- a/workflow-templates/ci.yaml
+++ b/workflow-templates/ci.yaml
@@ -5,13 +5,13 @@ on:
 
 jobs:
   lint:
-    uses: dvsa/.github/.github/workflows/nodejs-lint.yaml@v2
+    uses: dvsa/.github/.github/workflows/nodejs-lint.yaml@v2.2
 
   test:
-    uses: dvsa/.github/.github/workflows/nodejs-test.yaml@v2
+    uses: dvsa/.github/.github/workflows/nodejs-test.yaml@v2.2
 
   security:
-    uses: dvsa/.github/.github/workflows/nodejs-security.yaml@v2
+    uses: dvsa/.github/.github/workflows/nodejs-security.yaml@v2.2
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
@@ -33,7 +33,7 @@ jobs:
           echo "NAME=${PRETTY_BRANCH_NAME}" >> $GITHUB_OUTPUT
 
   build:
-    uses: dvsa/.github/.github/workflows/nodejs-build.yaml@v2
+    uses: dvsa/.github/.github/workflows/nodejs-build.yaml@v2.2
     needs: [ build-names ]
     with:
       upload_artifact: ${{ github.ref_name == 'main' }}
@@ -42,12 +42,27 @@ jobs:
 
   upload-to-s3:
     if: ${{ github.ref_name == github.event.repository.default_branch }}
-    uses: dvsa/.github/.github/workflows/upload-to-s3.yaml@v2
+    uses: dvsa/.github/.github/workflows/upload-to-s3.yaml@v2.2
     needs: [ lint, test, build, build-names ]
     with:
       environment: dev
       short_commit: ${{ needs.build-names.outputs.short_sha }}
       artifact: dist.zip
+      bucket_key: <location-in-bucket>/${{ needs.build-names.outputs.pretty_branch_name }}.zip
+    permissions:
+      id-token: write
+    secrets:
+      AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+
+  update-lambda-code:
+    if: ${{ github.ref_name == github.event.repository.default_branch }}
+    uses: dvsa/.github/.github/workflows/update-lambda-function.yaml@v2.2
+    needs: [ build-names, build, upload-s3 ]
+    with:
+      environment: dev
+      lambda_function_name: <function-name>
       bucket_key: <location-in-bucket>/${{ needs.build-names.outputs.pretty_branch_name }}.zip
     permissions:
       id-token: write
