--- a/.github/workflows/nodejs-publish.yaml
+++ b/.github/workflows/nodejs-publish.yaml
@@ -7,6 +7,18 @@ on:
         required: false
         type: string
         default: '16.x'
+      download_artifact:
+        required: false
+        type: boolean
+        default: false
+      build_folder:
+        required: false
+        type: string
+        default: 'package'
+      build_folder_path:
+        required: false
+        type: string
+        default: 'dist'
     secrets:
       NPM_AUTH_TOKEN:
         required: true
@@ -21,6 +33,12 @@ jobs:
         with:
           node-version: ${{ inputs.node_version }}
           registry-url: 'https://registry.npmjs.org'
+      - name: Download build artifact
+        if: inputs.download_artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.build_folder }}
+          path: ${{ inputs.build_folder_path }}
       - name: Publish to npm.js
         run: npm publish --access=public
         env:
