Updated documentation and templates - Updated npm-publish.yaml to include examples of using download_artifact - Updated documentation to help explain changes to npm-publish.yaml

--- a/workflow-templates/npm-publish.yaml
+++ b/workflow-templates/npm-publish.yaml
@@ -9,5 +9,8 @@ jobs:
     uses: dvsa/.github/.github/workflows/nodejs-publish.yaml@v2.3
     with:
       node-version: '16.x'
+      download_artifact: true
+      build_folder: package
+      build_folder_path: dist
     secrets:
       NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
