--- a/.github/workflows/upload-to-s3.yaml
+++ b/.github/workflows/upload-to-s3.yaml
@@ -18,6 +18,10 @@ on:
         required: false
         type: string
         default: dist
+      role_name_to_assume:
+        required: false
+        type: string
+        default: 'GithubActionsRole'
     secrets:
       AWS_ACCOUNT:
         required: true
@@ -35,7 +39,7 @@ jobs:
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/GithubActionsRole
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/${{ inputs.role_name_to_assume }}
           role-session-name: GithubActionsSession
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Download build artifact
