--- a/.github/workflows/nodejs-lint.yaml
+++ b/.github/workflows/nodejs-lint.yaml
@@ -7,6 +7,9 @@ on:
         required: false
         type: number
         default: 0
+      node_version:
+        required: false
+        type: string
 
 jobs:
   lint:
@@ -16,5 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         uses: dvsa/.github/.github/actions/install-deps@main
+        with:
+          node_version: ${{ inputs.node_version }}
       - name: Lint
         run: npm run lint -- --max-warnings ${{ inputs.max-warnings }}
