--- a/.github/workflows/nodejs-test.yaml
+++ b/.github/workflows/nodejs-test.yaml
@@ -7,6 +7,9 @@ on:
         required: false
         type: string
         default: 'test'
+      node_version:
+        required: false
+        type: string
 
 jobs:
   test:
@@ -16,5 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         uses: dvsa/.github/.github/actions/install-deps@main
+        with:
+          node_version: ${{ inputs.node_version }}
       - name: Test
         run: npm run ${{ inputs.test_command }}
