--- a/.github/workflows/update-lambda-function.yaml
+++ b/.github/workflows/update-lambda-function.yaml
@@ -11,6 +11,10 @@ on:
       bucket_key:
         required: true
         type: string
+      role_name_to_assume:
+        required: false
+        type: string
+        default: 'GithubActionsRole'
     secrets:
       AWS_ACCOUNT:
         required: true
@@ -28,7 +32,7 @@ jobs:
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@05b148adc31e091bafbaf404f745055d4d3bc9d2
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/GithubActionsRole
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/${{ inputs.role_name_to_assume }}
           role-session-name: GithubActionsSession
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Update lambda function code
