Changed name of node-version on install-deps action to node_version

--- a/.github/actions/install-deps/action.yaml
+++ b/.github/actions/install-deps/action.yaml
@@ -2,7 +2,7 @@ name: Install dependencies
 description: install all project dependencies.
 
 inputs:
-  node-version:
+  node_version:
     description: Node version used to install dependencies
     required: false
     default: '16.16'
