--- a/.github/workflows/nodejs-lint.yaml
+++ b/.github/workflows/nodejs-lint.yaml
@@ -10,7 +10,9 @@ on:
       node_version:
         required: false
         type: string
-
+      npm_version:
+        required: false
+        type: string
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -21,5 +23,6 @@ jobs:
         uses: dvsa/.github/.github/actions/install-deps@feature/VOL-3681-node-version-definable
         with:
           node_version: ${{ inputs.node_version }}
+          npm_version: ${{ inputs.npm_version }}
       - name: Lint
         run: npm run lint -- --max-warnings ${{ inputs.max-warnings }}
