Removed NPM install from install-deps and spit versions out

--- a/.github/actions/install-deps/action.yaml
+++ b/.github/actions/install-deps/action.yaml
@@ -19,8 +19,8 @@ runs:
       with:
         node-version: ${{ inputs.node_version }}
         cache: 'npm'
-    - run: npm i -g npm@${{ inputs.npm_version }}
-      shell: bash
+    - run: node --version
+    - run: npm --version
 
     - name: Cache dependencies
       uses: actions/cache@v3
