--- a/.github/workflows/nodejs-lint.yaml
+++ b/.github/workflows/nodejs-lint.yaml
@@ -10,9 +10,7 @@ on:
       node_version:
         required: false
         type: string
-      npm_version:
-        required: false
-        type: string
+        default: '18.x'
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -20,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
-        uses: dvsa/.github/.github/actions/install-deps@feature/VOL-3681-node-version-definable
+        uses: dvsa/.github/.github/actions/install-deps@v3.0.0
         with:
           node_version: ${{ inputs.node_version }}
           npm_version: ${{ inputs.npm_version }}
