--- a/.github/workflows/nodejs-security.yaml
+++ b/.github/workflows/nodejs-security.yaml
@@ -5,7 +5,7 @@ on:
       args:
         required: false
         type: string
-      continue-on-error:
+      continue_on_error:
         required: false
         type: boolean
         default: false
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
-        continue-on-error: ${{ inputs.continue-on-error }}
+        continue-on-error: ${{ inputs.continue_on_error }}
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
