--- a/.github/workflows/upload-to-s3.yaml
+++ b/.github/workflows/upload-to-s3.yaml
@@ -5,16 +5,16 @@ on:
       environment:
         required: true
         type: string
-      short_commit:
+      short-commit:
         required: true
         type: string
       artifact:
         required: true
         type: string
-      bucket_key:
+      bucket-key:
         required: true
         type: string
-      build_folder:
+      build-folder:
         required: false
         type: string
         default: dist
@@ -44,11 +44,11 @@ jobs:
         id: download
         uses: actions/download-artifact@v3
         with:
-          name: ${{ inputs.build_folder }}
+          name: ${{ inputs.build-folder }}
       - name: Upload to s3
         run: >
           aws s3api put-object
-          --tagging short_commit_id=${{ inputs.short_commit }}
+          --tagging short_commit_id=${{ inputs.short-commit }}
           --bucket ${{ secrets.BUCKET_NAME }}
-          --key ${{ inputs.bucket_key }}
+          --key ${{ inputs.bucket-key }}
           --body ${{steps.download.outputs.download-path}}/${{ inputs.artifact }}
