--- a/.github/workflows/update-lambda-function.yaml
+++ b/.github/workflows/update-lambda-function.yaml
@@ -5,10 +5,10 @@ on:
       environment:
         required: true
         type: string
-      lambda_function_name:
+      lambda-function-name:
         required: true
         type: string
-      bucket_key:
+      bucket-key:
         required: true
         type: string
     secrets:
@@ -34,4 +34,4 @@ jobs:
           role-session-name: GithubActionsSession
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Update lambda function code
-        run: aws lambda update-function-code --function-name ${{ inputs.lambda_function_name }} --s3-bucket "${{ secrets.BUCKET_NAME }}" --s3-key "${{ inputs.bucket_key }}" --publish --query FunctionName
+        run: aws lambda update-function-code --function-name ${{ inputs.lambda-function-name }} --s3-bucket "${{ secrets.BUCKET_NAME }}" --s3-key "${{ inputs.bucket-key }}" --publish --query FunctionName
