--- a/.github/workflows/nodejs-test.yaml
+++ b/.github/workflows/nodejs-test.yaml
@@ -3,11 +3,18 @@ name: Test
 on:
   workflow_call:
     inputs:
-      test_command:
+      test-command:
         required: false
         type: string
-        default: 'test'
-
+        default: 'npm run test'
+      node-version:
+        required: false
+        type: string
+        default: '18.x'
+      npm-version:
+        required: false
+        type: string
+        default: 'latest'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,6 +22,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
-        uses: dvsa/.github/.github/actions/install-deps@main
+        uses: dvsa/.github/.github/actions/install-deps@v3.0.0
+        with:
+          node-version: ${{ inputs.node-version }}
+          npm-version: ${{ inputs.npm-version }}
       - name: Test
-        run: npm run ${{ inputs.test_command }}
+        run: ${{ inputs.test-command }}
