--- a/.github/workflows/nodejs-lint.yaml
+++ b/.github/workflows/nodejs-lint.yaml
@@ -7,7 +7,14 @@ on:
         required: false
         type: number
         default: 0
-
+      node-version:
+        type: string
+        required: false
+        default: '18.x'
+      npm-version:
+        type: string
+        required: false
+        default: 'latest'
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -15,6 +22,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
-        uses: dvsa/.github/.github/actions/install-deps@main
+        uses: dvsa/.github/.github/actions/install-deps@v3.0.0
+        with:
+          node-version: ${{ inputs.node-version }}
+          npm-version: ${{ inputs.npm-version }}
       - name: Lint
         run: npm run lint -- --max-warnings ${{ inputs.max-warnings }}
