feat: added optional tags to workflow
- When implementing lifecycle policies on objects in RSP S3 buckets, it became apparent the best way to do this would be via tags
- This change adds an optional input, which can be used to pass tags (in URL query form) to the S3 upload command
- The tagging parameter has been wrapped in single quotes, and an & added to allow the chaining of tags.

--- a/.github/workflows/upload-to-s3.yaml
+++ b/.github/workflows/upload-to-s3.yaml
@@ -8,6 +8,10 @@ on:
       short-commit:
         required: true
         type: string
+      optional-tags:
+        required: false
+        type: string
+        default: ''
       artifact:
         required: true
         type: string
@@ -48,7 +52,7 @@ jobs:
       - name: Upload to s3
         run: >
           aws s3api put-object
-          --tagging short_commit_id=${{ inputs.short-commit }}
+          --tagging 'short_commit_id=${{ inputs.short-commit }}&${{ inputs.optional-tags }}'
           --bucket ${{ secrets.BUCKET_NAME }}
           --key ${{ inputs.bucket-key }}
           --body ${{steps.download.outputs.download-path}}/${{ inputs.artifact }}
