--- a/.github/workflows/java-security.yaml
+++ b/.github/workflows/java-security.yaml
@@ -7,6 +7,9 @@ on:
         required: false
         type: string
         default: '11'
+      snyk_threshold:
+        required: true
+        type: string
     secrets:
       SNYK_TOKEN:
         required: true
@@ -83,5 +86,5 @@ jobs:
       - name: Run Maven Compile to Download Project Dependencies
         run: mvn compile -DskipUTs=true
 
-      - name: Run SNYK Monitor
-        run: test --severity-threshold=high
+      - name: Run SNYK Test
+        run: test --severity-threshold=${{inputs.snyk_threshold}}
