Splitting snyk security into two workflows

--- a/.github/workflows/java-security.yaml
+++ b/.github/workflows/java-security.yaml
@@ -87,4 +87,4 @@ jobs:
         run: mvn compile -DskipUTs=true
 
       - name: Run SNYK Test
-        run: test --severity-threshold=${{inputs.snyk_threshold}}
+        run: snyk test --severity-threshold=${{inputs.snyk_threshold}}
