--- a/.github/workflows/java-security.yaml
+++ b/.github/workflows/java-security.yaml
@@ -8,8 +8,9 @@ on:
         type: string
         default: '11'
       snyk_threshold:
-        required: true
+        required: false
         type: string
+        default: 'high'
     secrets:
       SNYK_TOKEN:
         required: true
