--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -1,23 +1,25 @@
 name: PHP Security analysis
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  schedule:
-    - cron: '0 0 * * 1'
+  workflow_call:
+   inputs:
+    php_versions:
+    required: true
+    default: "['7.4', '8.0', '8.1']"
+    type: string
 
 jobs:
   snyk:
     runs-on: ubuntu-latest
 
-    strategy:
+     strategy:
       matrix:
+        php: ${{ fromJSON(inputs.php_version) }}
         stability: [prefer-lowest, prefer-stable]
 
     name: Snyk - ${{ matrix.stability }}
 
+  
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -25,7 +27,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: ${{ matrix.version }}
           coverage: none
           extensions: mbstring
 
