--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -7,7 +7,9 @@ on:
     required: true
     default: "['7.4', '8.0', '8.1']"
     type: string
-
+  secrets:
+      SNYK_TOKEN:
+        required: true
 jobs:
  snyk:
    runs-on: ubuntu-latest
