--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: ${{ matrix.version }}
+        php-version: ${{ matrix.php }}
         coverage: none
         extensions: mbstring
 
