--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -41,7 +41,7 @@ jobs:
         args: --sarif-file-output=snyk.sarif
 
     - name: Upload result to GitHub Code Scanning
-      if: ${{ github.action_repository.private && (success() || failure() )}}
+      if: ${{ github.action_repository.private == false && (success() || failure() )}}
       continue-on-error: true
       uses: github/codeql-action/upload-sarif@v2
       with:
