--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -38,6 +38,10 @@ jobs:
         run: vendor/bin/phpstan analyze --no-progress
 
   php-codesniffer:
+    matrix:
+     php: ${{ fromJSON(inputs.php_versions) }}
+     stability: [prefer-lowest, prefer-stable]
+
     name: PHP-CodeSniffer - ${{ matrix.php }}
     runs-on: ubuntu-latest
 
@@ -62,6 +66,10 @@ jobs:
         run: vendor/bin/phpcs -q
 
   psalm:
+    matrix:
+     php: ${{ fromJSON(inputs.php_versions) }}
+     stability: [prefer-lowest, prefer-stable]
+
     name: Psalm - ${{ matrix.php }}
     runs-on: ubuntu-latest
 
