--- a/workflow-templates/php-security.yml
+++ b/workflow-templates/php-security.yml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   security:
-    uses: dvsa/.github/.github/workflows/php-security.yaml@promote-php-actions
+    uses: dvsa/.github/.github/workflows/php-security.yml@promote-php-actions
+    with: 
+     php_versions: "[\"7.4\"]"
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
