--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -11,7 +11,7 @@ jobs:
   phpstan:
     strategy:
       matrix:
-        php: ${{ fromJSON(inputs.php_versions) }}
+        php: ${{ fromJSON(inputs.php-versions) }}
         stability: [prefer-lowest, prefer-stable]
 
     name: PHPStan - ${{ matrix.php }}
