--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        php: ${{ fromJSON(inputs.php_versions) }}
+        php: ${{ fromJSON(inputs.php-versions) }}
         stability: [prefer-lowest, prefer-stable]
 
     name: PHP test ${{ matrix.php }} - ${{ matrix.stability }}
