--- a/workflow-templates/ci.yaml
+++ b/workflow-templates/ci.yaml
@@ -21,6 +21,8 @@ jobs:
     outputs:
       short_sha: ${{ steps.sha.outputs.SHORT_SHA }}
       pretty_branch_name: ${{ steps.branch.outputs.NAME }}
+    env:
+      BRANCH_NAME: ${{ github.ref_name }}
     steps:
       - uses: actions/checkout@v3
       - name: Set short sha output
@@ -29,7 +31,7 @@ jobs:
       - name: Set archive name output
         id: branch
         run: |
-          export PRETTY_BRANCH_NAME=$(tr '/' '-' <<< ${{ github.ref_name }})
+          export PRETTY_BRANCH_NAME=$(tr '/' '-' <<< "$BRANCH_NAME")
           echo "NAME=${PRETTY_BRANCH_NAME}" >> $GITHUB_OUTPUT
 
   build:
