--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -14,8 +14,7 @@ jobs:
     strategy:
       matrix:
         php: ${{ fromJSON(inputs.php-versions) }}
-        stability: [prefer-lowest, prefer-stable]
-
+        
     name: PHP test ${{ matrix.php }} - ${{ matrix.stability }}
 
     steps:
@@ -30,7 +29,7 @@ jobs:
           coverage: none
 
       - name: Install dependencies
-        run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --no-progress
+        run: composer install --optimize-autoloader --no-progress
 
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
