--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -5,6 +5,11 @@ on:
   secrets:
       SNYK_TOKEN:
         required: true
+  inputs:
+    upload-sarif:
+      required: false
+      type: boolean
+      default: false
 jobs:
  snyk:
    runs-on: ubuntu-latest
@@ -29,7 +34,7 @@ jobs:
         args: --sarif-file-output=snyk.sarif
 
     - name: Upload result to GitHub Code Scanning
-      if: ${{ github.action_repository.private == false && (success() || failure() )}}
+      if: ${{ inputs.upload-sarif }}
       continue-on-error: true
       uses: github/codeql-action/upload-sarif@v2
       with:
