--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -47,10 +47,10 @@ jobs:
         repo: ${{ github.event.repository.name }}
         graphqlEndpoint: ${{ github.graphql_url }}
         token: ${{ secrets.GITHUB_TOKEN }}
-    - run: "echo 'latest release: ${{ steps.isPrivate.outputs.data }}'" 
-    
+    - run: "echo 'isPrivate: ${{ steps.isPrivate.outputs.data }}'" 
+
     - name: Upload result to GitHub Code Scanning
-      if: ${{ inputs.upload-sarif }}
+      if: ${{ fromJSON(steps.isPrivate.outputs.data.repository.isPrivate) == false && inputs.upload-sarif == true } }} 
       continue-on-error: true
       uses: github/codeql-action/upload-sarif@v2
       with:
