--- a/workflow-templates/php-security.yml
+++ b/workflow-templates/php-security.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   security:
-    uses: dvsa/.github/.github/workflows/php-security.yml@promote-php-actions
+    uses: dvsa/.github/.github/workflows/php-security.yml@v3.2.0
     with: 
      php_versions: "[\"7.4\"]"
     secrets:
